@@ -2,18 +2,18 @@ package core.basesyntax.service.impl;
 
 import static org.junit.Assert.assertEquals;
 
-import core.basesyntax.service.ReaderService;
 import core.basesyntax.service.WriterService;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.List;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
 public class WriterServiceImplTest {
     private static WriterService writerService;
-    private static ReaderService readerService;
     private static Path existedFilePath;
     private static Path notExistedFilePath;
     private static Path emptyFilePath;
@@ -21,7 +21,6 @@ public class WriterServiceImplTest {
     @BeforeClass
     public static void beforeClass() throws Exception {
         writerService = new WriterServiceImpl();
-        readerService = new ReaderServiceImpl();
         existedFilePath = Paths.get("src/test/resources/outputData.csv");
         notExistedFilePath = Paths.get("src/test/resources/notExistedWriter.csv");
         emptyFilePath = Paths.get("src/test/resources/emptyFile.csv");
@@ -29,29 +28,29 @@ public class WriterServiceImplTest {
     }
 
     @Test
-    public void writeToFile_existedFile_Ok() {
+    public void writeToFile_existedFile_Ok() throws IOException {
         String report = "one\ntwo\nthree";
         writerService.writeToFile(report, existedFilePath);
         List<String> expected = List.of("one", "two", "three");
-        List<String> actual = readerService.readFile(existedFilePath);
+        List<String> actual = Files.readAllLines(existedFilePath);
         assertEquals(expected, actual);
     }
 
     @Test
-    public void writeToFile_notExistedFile_Ok() {
+    public void writeToFile_notExistedFile_Ok() throws IOException {
         String report = "one\ntwo\nthree";
         writerService.writeToFile(report, notExistedFilePath);
         List<String> expected = List.of("one", "two", "three");
-        List<String> actual = readerService.readFile(notExistedFilePath);
+        List<String> actual = Files.readAllLines(notExistedFilePath);
         assertEquals(expected, actual);
     }
 
     @Test
-    public void writeToFile_emptyData_Ok() {
+    public void writeToFile_emptyData_Ok() throws IOException {
         String report = "";
         writerService.writeToFile(report, emptyFilePath);
-        List<String> expected = List.of();
-        List<String> actual = readerService.readFile(emptyFilePath);
+        List<String> expected = Collections.emptyList();
+        List<String> actual = Files.readAllLines(emptyFilePath);
         assertEquals(expected, actual);
     }
 }
